--- a/README
+++ b/README
@@ -1,1 +1,5 @@
+============================0.2====================
+1.修复了之前时间与内容不能一一对应的问题，并精确到分钟
+2.转发的说说附带了原文，看起来不那么莫名其妙一点
+=============================0.1===================
 一个简单粗暴爬自己QQ空间说说（的文字）并写成txt的工具
