--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 ============================0.2====================
 1.修复了之前时间与内容不能一一对应的问题，并精确到分钟
 2.转发的说说附带了原文，看起来不那么莫名其妙一点
+3.取消了对换行符的替换……反正以后要写进数据库里的
+4.因为直接打开说说页面重定向去登录会404（不知道腾讯服务器的锅还是剑桥网太差），改为从QQ空间主页登录然后再转去说说
 =============================0.1===================
 一个简单粗暴爬自己QQ空间说说（的文字）并写成txt的工具
