--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+===========================0.3=====================
+超长说说现在可以点开全文了
+原说说的作者与内容现在分开显示
+现在转发说说显示转发时间而非原说说时间了
 ============================0.2====================
 1.修复了之前时间与内容不能一一对应的问题，并精确到分钟
 2.转发的说说附带了原文，看起来不那么莫名其妙一点
